NetBSD Problem Report #51190

From www@NetBSD.org  Mon May 30 06:30:08 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 58BDE7ABDC
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 30 May 2016 06:30:08 +0000 (UTC)
Message-Id: <20160530063007.7FBD37ABDE@mollari.NetBSD.org>
Date: Mon, 30 May 2016 06:30:07 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/lib/libform/type_numeric.c:139]: (style) Redundant condition
X-Send-Pr-Version: www-1.0

>Number:         51190
>Category:       lib
>Synopsis:       src/lib/libform/type_numeric.c:139]: (style) Redundant condition
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon May 30 06:35:01 +0000 2016
>Closed-Date:    Tue May 31 03:52:50 +0000 2016
>Last-Modified:  Tue May 31 03:52:50 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160529
>Organization:
>Environment:
>Description:
src/lib/libform/type_numeric.c:139]: (style) Redundant condition: If 'EXPR == '.'', the comparison 'EXPR != 0' is always true.


Source code is

    if ((buf[cur] != '\0') && (buf[cur] == '.')) {

Suggest new code

   if (buf[cur] == '.') {


>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51190 CVS commit: src/lib/libform
Date: Mon, 30 May 2016 17:48:29 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Mon May 30 17:48:29 UTC 2016

 Modified Files:
 	src/lib/libform: type_numeric.c

 Log Message:
 PR 51190 David Binderman: simplify redundant conditionals.
 Also add paranoia when looping on isdigit().


 To generate a diff of this commit:
 cvs rdiff -u -r1.8 -r1.9 src/lib/libform/type_numeric.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Tue, 31 May 2016 03:52:50 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.