PR 51190 David Binderman: simplify redundant conditionals. Also add paranoia when looping on isdigit().