lib/libform/type_numeric.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: type_numeric.c,v 1.8 2004/10/28 21:14:52 dsl Exp $	*/
+/*	$NetBSD: type_numeric.c,v 1.9 2016/05/30 17:48:29 dholland Exp $	*/
 
 /*-
  * Copyright (c) 1998-1999 Brett Lymn
@@ -30,7 +30,7 @@
  */
 
 #include <sys/cdefs.h>
-__RCSID("$NetBSD: type_numeric.c,v 1.8 2004/10/28 21:14:52 dsl Exp $");
+__RCSID("$NetBSD: type_numeric.c,v 1.9 2016/05/30 17:48:29 dholland Exp $");
 
 #include <stdlib.h>
 #include <string.h>
@@ -136,16 +136,15 @@ numeric_check_field(FIELD *field, char *args)
 		cur++;
 
 	  /* if not at end of string then check for decimal... */
-	if ((buf[cur] != '\0') && (buf[cur] == '.')) {
+	if (buf[cur] == '.') {
 		cur++;
-		  /* check for more digits now.... */
-		while(isdigit((unsigned char)buf[cur]))
+		/* check for more digits now.... */
+		while (buf[cur] && isdigit((unsigned char)buf[cur]))
 			cur++;
 	}
 	
 	  /* check for an exponent */
-	if ((buf[cur] != '\0') &&
-	    ((buf[cur] == 'E') || (buf[cur] == 'e'))) {
+	if ((buf[cur] == 'E') || (buf[cur] == 'e')) {
 		cur++;
 		if (buf[cur] == '\0')
 			return FALSE;
